--- a/style.css
+++ b/style.css
@@ -1454,12 +1454,12 @@ input:checked {
 /* Adjust the project card width for smaller screens */
 @media (max-width: 48rem) { /* 768px converted to rem */
   .project-card {
-    max-width: 13.125rem; /* 210px converted to rem */
+    max-width: 12.3rem;
   }
 }
 
 @media (max-width: 30rem) { /* 480px converted to rem */
   .project-card {
-    max-width: 100%; /* Make the card full-width on mobile */
+    max-width: 85%; /* Make the card full-width on mobile */
   }
 }
