--- a/style.css
+++ b/style.css
@@ -1427,6 +1427,9 @@ input:checked {
 }
 
 .project-actions a {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem; /* Add space between the icon and the text */
   padding: auto;
   color: var(--important);
   text-decoration: none;
@@ -1436,6 +1439,11 @@ input:checked {
 
 .project-actions a:hover {
   color: rgb(255, 131, 139); /* A color that matches part of the gradient */
+}
+
+.github-logo {
+  width: 1rem; /* Adjust the size of the GitHub logo */
+  height: 1rem;
 }
 
 .project-list {
@@ -1460,6 +1468,6 @@ input:checked {
 
 @media (max-width: 30rem) { /* 480px converted to rem */
   .project-card {
-    max-width: 85%; /* Make the card full-width on mobile */
+    max-width: 80%; /* Make the card full-width on mobile */
   }
 }
